[package]
name = "new1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"]}
tokio ={ version = "1.29.1",features = ["full"]}
serde_json = "1.0.104"
metaflac="0.2.5"
indexmap = "2.0.0"
id3="1.7.0"